--- a/setup.cfg
+++ b/setup.cfg
@@ -21,16 +21,10 @@ description = Bayesian statistical models of metabolic networks
 long_description = file: readme.md
 keywords =
 [options]
-dependency_links =
-    git+git://github.com/biosustain/Maud@master#egg=maud
+# dependency_links =
+    # git+git://github.com/biosustain/Maud/tarball/master#egg=maud
 zip_safe = True
 include_package_data=True
-install_requires =
-    maud
-    arviz>=0.11.2
-    plotnine
-    matplotlib
-    typer
 python_requires = >=3.7
 packages = find:
 package_dir =
